--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
         <p>En plein centre de ville ou en pleine nature</p>
 
-        <form action="" method="GET" name="location-search">
+        <form action="#" method="GET" name="location-search">
           <label for="location">
             <i class="fas fa-map-marker-alt"></i>
           </label>
@@ -355,7 +355,7 @@
                     alt="Chambre avec lit double."
                   />
                 </figure>
-                <figcaption>
+                <div>
                   <h3>Hôtel Le soleil du matin</h3>
                   <p>Nuit à partir de 128<strong>€</strong></p>
                   <div class="hostingStar">
@@ -380,7 +380,7 @@
                       data-active="false"
                     ></i>
                   </div>
-                </figcaption>
+                </div>
               </a>
             </article>
 
@@ -393,7 +393,7 @@
                     alt="Grande chambre avec lit double."
                   />
                 </figure>
-                <figcaption>
+                <div>
                   <h3>Chambres d'hôtes Au coeur de l'eau</h3>
 
                   <p>Nuit à partir de 71<strong>€</strong></p>
@@ -419,7 +419,7 @@
                       data-active="false"
                     ></i>
                   </div>
-                </figcaption>
+                </div>
               </a>
             </article>
 
@@ -432,7 +432,7 @@
                     alt="Chambre avec lit double."
                   />
                 </figure>
-                <figcaption>
+                <div>
                   <h3>Hôtel bleu et Blanc</h3>
 
                   <p>Nuit à partir de 68<strong>€</strong></p>
@@ -458,7 +458,7 @@
                       data-active="false"
                     ></i>
                   </div>
-                </figcaption>
+                </div>
               </a>
             </article>
           </div>
@@ -476,9 +476,9 @@
                 alt="Un port de plaisance remplis de bateau en premier plan avec une ville en second plan"
               />
             </figure>
-            <figcaption>
+            <div class="figcaption">
               <h3>Vieux Port</h3>
-            </figcaption>
+            </div>
           </a>
         </div>
         <div class="activityCard2">
@@ -490,9 +490,9 @@
                 alt="Un port de plaisance remplis de bateau en premier plan avec une ville en second plan"
               />
             </figure>
-            <figcaption>
+            <div class="figcaption">
               <h3>Fort de Pomègues</h3>
-            </figcaption>
+            </div>
           </a>
         </div>
 
@@ -505,9 +505,9 @@
                 alt="Un port de plaisance remplis de bateau en premier plan avec une ville en second plan"
               />
             </figure>
-            <figcaption>
+            <div class="figcaption">
               <h3>Parc National des Calanques</h3>
-            </figcaption>
+            </div>
           </a>
         </div>
         <div class="activityCard5">
@@ -519,9 +519,9 @@
                 alt="Un port de plaisance remplis de bateau en premier plan avec une ville en second plan"
               />
             </figure>
-            <figcaption>
+            <div class="figcaption">
               <h3>Notre-Dame-de-la-Garde</h3>
-            </figcaption>
+            </div>
           </a>
         </div>
       </section>
