--- a/index.html
+++ b/index.html
@@ -529,20 +529,20 @@
 
     <footer>
       <section class="apropos">
-        <p>A propos</p>
+        <h6>A propos</h6>
         <a href="#">Fonctionnement du site</a>
         <a href="#">Conditions générale de vente</a>
         <a href="#">Données et confidentialité</a>
       </section>
 
       <section class="hebergement">
-        <p>Nos hébergements</p>
+        <h6>Nos hébergements</h6>
         <a href="#">Charte qualité</a>
         <a href="#">Soumettre votre hôtel</a>
       </section>
 
       <section class="assistance">
-        <p>Assistance</p>
+        <h6>Assistance</h6>
         <a href="#">Centre d'aide</a>
         <a href="#">Nous contacter</a>
       </section>
