--- a/index.html
+++ b/index.html
@@ -75,25 +75,28 @@
 
         <div class="filter">
           <p>Filtres</p>
-          <div class="btnFilter">
+          <button class="btnFilter">
             <i
               class="fas fa-money-bill-wave searchFiltersFilterWrapiconIcon"
             ></i>
 
             <h2>Économique</h2>
-          </div>
-          <div class="btnFilter">
+          </button>
+
+          <button class="btnFilter">
             <i class="fas fa-child searchFiltersFilterWrapiconIcon"></i>
             <h2>Familial</h2>
-          </div>
-          <div class="btnFilter">
+          </button>
+
+          <button class="btnFilter">
             <i class="fas fa-heart searchFiltersFilterWrapiconIcon"></i>
             <h2>Romantique</h2>
-          </div>
-          <div class="btnFilter">
+          </button>
+
+          <button class="btnFilter">
             <i class="fas fa-dog searchFiltersFilterWrapiconIcon"></i>
             <h2>Animaux autorisés</h2>
-          </div>
+          </button>
         </div>
 
         <div class="resultRearch">
