--- a/index.html
+++ b/index.html
@@ -74,28 +74,28 @@
         </form>
 
         <div class="filter">
-          <p>Filtres</p>
+          <span>Filtres</span>
           <button class="btnFilter">
             <i
               class="fas fa-money-bill-wave searchFiltersFilterWrapiconIcon"
             ></i>
 
-            <h2>Économique</h2>
+            Économique
           </button>
 
           <button class="btnFilter">
             <i class="fas fa-child searchFiltersFilterWrapiconIcon"></i>
-            <h2>Familial</h2>
+            Familial
           </button>
 
           <button class="btnFilter">
             <i class="fas fa-heart searchFiltersFilterWrapiconIcon"></i>
-            <h2>Romantique</h2>
+            Romantique
           </button>
 
           <button class="btnFilter">
             <i class="fas fa-dog searchFiltersFilterWrapiconIcon"></i>
-            <h2>Animaux autorisés</h2>
+            Animaux autorisés
           </button>
         </div>
 
