--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Chemin Pour Style Page -->
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style.css">
 
     <!-- Icon Barre Navigateur -->
-    <link rel="icon" href="../MEDIA/favicon.ico" />
+    <link rel="icon" href="../MEDIA/favicon.ico">
 
     <!-- Import Base de Donnée Icon -->
     <!-- <link
@@ -25,20 +25,20 @@
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    />
+    >
 
     <!-- Référencement Google -->
-    <meta name="title" content="Reservia - Voyagez librement !" />
+    <meta name="title" content="Reservia - Voyagez librement !">
     <meta
       name="description"
       content="Agence de voyage pour vous rendre n'importe où dans le monde pour des vancances de rêves."
-    />
+    >
 
     <title>Booki - Voyagez librement !</title>
   </head>
   <body>
     <header>
-      <img class="headerImg" src="./MEDIA/Booki.png" alt="Reservia" />
+      <img class="headerImg" src="./MEDIA/Booki.png" alt="Reservia">
       <nav>
         <ul>
           <li>
@@ -65,8 +65,7 @@
             type="text"
             name="location"
             placeholder="Marseille, France"
-            aria-label="Search"
-          />
+            aria-label="Search">
           <button type="submit" aria-label="search">
             <span class="btn-text">Rechercher</span
             ><i class="fas fa-search searchFiltersFilterWrapiconIcon"></i>
@@ -75,7 +74,7 @@
 
         <div class="filter">
           <span>Filtres</span>
-          <button class="btnFilter">
+          <button type="button" class="btnFilter">
             <i
               class="fas fa-money-bill-wave searchFiltersFilterWrapiconIcon"
             ></i>
@@ -83,17 +82,17 @@
             Économique
           </button>
 
-          <button class="btnFilter">
+          <button type="button" class="btnFilter">
             <i class="fas fa-child searchFiltersFilterWrapiconIcon"></i>
             Familial
           </button>
 
-          <button class="btnFilter">
+          <button type="button" class="btnFilter">
             <i class="fas fa-heart searchFiltersFilterWrapiconIcon"></i>
             Romantique
           </button>
 
-          <button class="btnFilter">
+          <button type="button" class="btnFilter">
             <i class="fas fa-dog searchFiltersFilterWrapiconIcon"></i>
             Animaux autorisés
           </button>
@@ -115,8 +114,7 @@
                   <img
                     class="hostingMainCardFigureImg"
                     src="./MEDIA/hosting/small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-                    alt="Chambre avec lit superposé."
-                  />
+                    alt="Chambre avec lit superposé.">
                   <figcaption>
                     <h3>Auberge la Cannebière</h3>
                   </figcaption>
@@ -156,8 +154,7 @@
                   <img
                     class="hostingMainCardFigureImg"
                     src="./MEDIA/hosting/small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
-                    alt="Chambre avec deux lits séparés."
-                  />
+                    alt="Chambre avec deux lits séparés.">
                   <figcaption>
                     <h3>Hôtel du port</h3>
                   </figcaption>
@@ -194,8 +191,7 @@
                   <img
                     class="hostingMainCardFigureImg"
                     src="./MEDIA/hosting/small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
-                    alt="Chambre lit double."
-                  />
+                    alt="Chambre lit double.">
                   <figcaption>
                     <h3>Hôtel Les mouettes</h3>
                   </figcaption>
@@ -232,8 +228,7 @@
                   <img
                     class="hostingMainCardFigureImg"
                     src="./MEDIA/hosting/small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
-                    alt="Chambre avec  lit double."
-                  />
+                    alt="Chambre avec  lit double.">
                   <figcaption>
                     <h3>Hôtel de la mer</h3>
                   </figcaption>
@@ -270,8 +265,7 @@
                   <img
                     class="hostingMainCardFigureImg"
                     src="./MEDIA/hosting/small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
-                    alt="Chambre avec deux lits superposés."
-                  />
+                    alt="Chambre avec deux lits superposés.">
                   <figcaption>
                     <h3>Auberge Le Panier</h3>
                   </figcaption>
@@ -311,8 +305,7 @@
                   <img
                     class="hostingMainCardFigureImg"
                     src="./MEDIA/hosting/small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
-                    alt="Chambre avec lit double."
-                  />
+                    alt="Chambre avec lit double.">
                   <figcaption>
                     <h3>Hôtel chez Amina</h3>
                   </figcaption>
@@ -355,8 +348,7 @@
                   <img
                     class="hostingMainCardFigureImg"
                     src="./MEDIA/hosting/small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                    alt="Chambre avec lit double."
-                  />
+                    alt="Chambre avec lit double.">
                 </figure>
                 <div>
                   <h3>Hôtel Le soleil du matin</h3>
@@ -393,8 +385,7 @@
                   <img
                     class="hostingMainCardFigureImg"
                     src="./MEDIA/hosting/small/aw-creative-VGs8z60yT2c-unsplash.jpg"
-                    alt="Grande chambre avec lit double."
-                  />
+                    alt="Grande chambre avec lit double.">
                 </figure>
                 <div>
                   <h3>Chambres d'hôtes Au coeur de l'eau</h3>
@@ -432,8 +423,7 @@
                   <img
                     class="hostingMainCardFigureImg"
                     src="./MEDIA/hosting/small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-                    alt="Chambre avec lit double."
-                  />
+                    alt="Chambre avec lit double.">
                 </figure>
                 <div>
                   <h3>Hôtel bleu et Blanc</h3>
@@ -442,20 +432,16 @@
                   <div class="hostingStar">
                     <i
                       class="fas fa-star hostingMainCardGradeIcon"
-                      data-active="true"
-                    ></i>
+                      data-active="true"></i>
                     <i
                       class="fas fa-star hostingMainCardGradeIcon"
-                      data-active="true"
-                    ></i>
+                      data-active="true"></i>
                     <i
                       class="fas fa-star hostingMainCardGradeIcon"
-                      data-active="true"
-                    ></i>
+                      data-active="true"></i>
                     <i
                       class="fas fa-star hostingMainCardGradeIcon"
-                      data-active="true"
-                    ></i>
+                      data-active="true"></i>
                     <i
                       class="fas fa-star hostingMainCardGradeIcon"
                       data-active="false"
@@ -476,8 +462,7 @@
               <img
                 class="smallImg"
                 src="./MEDIA/activity/medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
-                alt="Un port de plaisance remplis de bateau en premier plan avec une ville en second plan"
-              />
+                alt="Un port de plaisance remplis de bateau en premier plan avec une ville en second plan">
             </figure>
             <div class="figcaption">
               <h3>Vieux Port</h3>
@@ -490,8 +475,7 @@
               <img
                 class="smallImg2"
                 src="./MEDIA/activity/small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
-                alt="Un port de plaisance remplis de bateau en premier plan avec une ville en second plan"
-              />
+                alt="Un port de plaisance remplis de bateau en premier plan avec une ville en second plan">
             </figure>
             <div class="figcaption">
               <h3>Fort de Pomègues</h3>
@@ -505,8 +489,7 @@
               <img
                 class="smallImg4"
                 src="./MEDIA/activity/medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
-                alt="Un port de plaisance remplis de bateau en premier plan avec une ville en second plan"
-              />
+                alt="Un port de plaisance remplis de bateau en premier plan avec une ville en second plan">
             </figure>
             <div class="figcaption">
               <h3>Parc National des Calanques</h3>
@@ -519,8 +502,7 @@
               <img
                 class="smallImg5"
                 src="./MEDIA/activity/small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
-                alt="Un port de plaisance remplis de bateau en premier plan avec une ville en second plan"
-              />
+                alt="Un port de plaisance remplis de bateau en premier plan avec une ville en second plan">
             </figure>
             <div class="figcaption">
               <h3>Notre-Dame-de-la-Garde</h3>
